--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div id="gifcontainer" class="col-11 bluesubcontainer">
+            <!--gifs load here-->
+        </div>
+    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
     <script src="assets/javascript/script.js"></script>
