--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
-    <title>Page name</title>
+    <title>Marvel gif finder</title>
     <!-- <link rel="stylesheet" href="assets/css/reset.css" type="text/css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
@@ -29,11 +29,11 @@
     <div class="row">
         <div class="col-sm-6 col-xs-12">
             <div id="buttoncontainer" class="redsubcontainer"> </div>
-            <!-- class="btn-group" role="group" -->
+            <!--where buttons are created -->
         </div>
         <div class="col-sm-5 col-xs-12">
             <div class="input-group mb-3 bluesubcontainer">
-                <input type="text" class="form-control" placeholder="new character" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input id="newbuttonname" type="text" class="form-control" placeholder="new character" aria-label="Recipient's username" aria-describedby="basic-addon2">
                 <div class="input-group-append">
                     <button id="userinput" class="btn btn-outline-secondary" type="button">Create button</button>
                 </div>
