--- a/index.html
+++ b/index.html
@@ -7,39 +7,42 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     <title>Marvel gif finder</title>
-    <!-- <link rel="stylesheet" href="assets/css/reset.css" type="text/css"> -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-
 </head>
 
 <body>
     <div class="row">
+
         <div class="col-sm-6 col-xs-12">
             <img id="logo" src="assets/images/marvellogo.png" alt="marvel logo" />
         </div>
+
         <div class="col-sm-6 col-xs-12">
             <h1>animated gif finder</h1>
         </div>
-
-
+        
     </div>
 
     <div class="row">
+
         <div class="col-sm-6 col-xs-12">
             <div id="buttoncontainer" class="redsubcontainer"> </div>
             <!--where buttons are created -->
         </div>
+
         <div class="col-sm-5 col-xs-12">
             <div class="input-group mb-3 bluesubcontainer">
-                <input id="newbuttonname" type="text" class="form-control" placeholder="new character" aria-label="Recipient's username" aria-describedby="basic-addon2">
+                <input id="newbuttonname" type="text" class="form-control" placeholder="new character">
                 <div class="input-group-append">
                     <button id="userinput" class="btn btn-outline-secondary" type="button">Create button</button>
                 </div>
             </div>
         </div>
+
     </div>
+
     <div class="row">
         <div id="gifcontainer" class="col-11 bluesubcontainer">
             <!--gifs load here-->
